// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDocsFromSource > snapshot tests > ButtonProps output matches snapshot 1`] = `
{
  "entries": [
    {
      "description": "Props for the Button component.",
      "kind": "interface",
      "name": "ButtonProps",
      "properties": [
        {
          "defaultValue": "m",
          "description": "Button size.",
          "name": "size",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "simple-interface.ts",
            "line": 10,
          },
          "tags": {
            "default": "m",
          },
          "type": {
            "kind": "reference",
            "name": "ButtonSize",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Visual variant of the button.",
          "name": "variant",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "simple-interface.ts",
            "line": 15,
          },
          "tags": {},
          "type": {
            "kind": "union",
            "members": [
              {
                "kind": "literal",
                "value": "'primary'",
              },
              {
                "kind": "literal",
                "value": "'secondary'",
              },
              {
                "kind": "literal",
                "value": "'ghost'",
              },
            ],
          },
        },
        {
          "defaultValue": undefined,
          "description": "Whether the button is disabled.",
          "name": "disabled",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "simple-interface.ts",
            "line": 18,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "boolean",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Click handler.",
          "name": "onClick",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "simple-interface.ts",
            "line": 23,
          },
          "tags": {},
          "type": {
            "kind": "function",
            "parameters": [
              {
                "name": "event",
                "optional": false,
                "rest": false,
                "type": {
                  "kind": "reference",
                  "name": "MouseEvent",
                },
              },
            ],
            "returnType": {
              "kind": "intrinsic",
              "name": "void",
            },
          },
        },
        {
          "defaultValue": undefined,
          "description": "The content of the button.",
          "name": "children",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "simple-interface.ts",
            "line": 26,
          },
          "tags": {},
          "type": {
            "kind": "reference",
            "name": "React.ReactNode",
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "simple-interface.ts",
        "line": 4,
      },
      "tags": {},
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": "m",
            "description": "Button size.",
            "name": "size",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "simple-interface.ts",
              "line": 10,
            },
            "tags": {
              "default": "m",
            },
            "type": {
              "kind": "reference",
              "name": "ButtonSize",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Visual variant of the button.",
            "name": "variant",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "simple-interface.ts",
              "line": 15,
            },
            "tags": {},
            "type": {
              "kind": "union",
              "members": [
                {
                  "kind": "literal",
                  "value": "'primary'",
                },
                {
                  "kind": "literal",
                  "value": "'secondary'",
                },
                {
                  "kind": "literal",
                  "value": "'ghost'",
                },
              ],
            },
          },
          {
            "defaultValue": undefined,
            "description": "Whether the button is disabled.",
            "name": "disabled",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "simple-interface.ts",
              "line": 18,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "boolean",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Click handler.",
            "name": "onClick",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "simple-interface.ts",
              "line": 23,
            },
            "tags": {},
            "type": {
              "kind": "function",
              "parameters": [
                {
                  "name": "event",
                  "optional": false,
                  "rest": false,
                  "type": {
                    "kind": "reference",
                    "name": "MouseEvent",
                  },
                },
              ],
              "returnType": {
                "kind": "intrinsic",
                "name": "void",
              },
            },
          },
          {
            "defaultValue": undefined,
            "description": "The content of the button.",
            "name": "children",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "simple-interface.ts",
              "line": 26,
            },
            "tags": {},
            "type": {
              "kind": "reference",
              "name": "React.ReactNode",
            },
          },
        ],
      },
      "typeParameters": [],
    },
  ],
  "related": [
    {
      "description": "",
      "kind": "typeAlias",
      "name": "ButtonSize",
      "properties": [],
      "source": {
        "column": 7,
        "filePath": "simple-interface.ts",
        "line": 29,
      },
      "tags": {},
      "type": {
        "kind": "union",
        "members": [
          {
            "kind": "literal",
            "value": "'xs'",
          },
          {
            "kind": "literal",
            "value": "'s'",
          },
          {
            "kind": "literal",
            "value": "'m'",
          },
          {
            "kind": "literal",
            "value": "'l'",
          },
          {
            "kind": "literal",
            "value": "'xl'",
          },
        ],
      },
      "typeParameters": [],
    },
  ],
  "version": 1,
}
`;

exports[`generateDocsFromSource > snapshot tests > DocumentedProps output matches snapshot 1`] = `
{
  "entries": [
    {
      "description": "A component with many JSDoc tags.",
      "kind": "interface",
      "name": "DocumentedProps",
      "properties": [
        {
          "defaultValue": undefined,
          "description": "The component's title.",
          "name": "title",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "jsdoc-tags.ts",
            "line": 14,
          },
          "tags": {
            "example": [
              "Hello World",
              "Another example",
            ],
          },
          "type": {
            "kind": "primitive",
            "name": "string",
          },
        },
        {
          "defaultValue": undefined,
          "description": "A deprecated prop.",
          "name": "name",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "jsdoc-tags.ts",
            "line": 21,
          },
          "tags": {
            "deprecated": "Use \`title\` instead.",
          },
          "type": {
            "kind": "primitive",
            "name": "string",
          },
        },
        {
          "defaultValue": "medium",
          "description": "Size of the component.",
          "name": "size",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "jsdoc-tags.ts",
            "line": 29,
          },
          "tags": {
            "default": "medium",
            "since": "2.0.0",
          },
          "type": {
            "kind": "union",
            "members": [
              {
                "kind": "literal",
                "value": "'small'",
              },
              {
                "kind": "literal",
                "value": "'medium'",
              },
              {
                "kind": "literal",
                "value": "'large'",
              },
            ],
          },
        },
        {
          "defaultValue": undefined,
          "description": "Internal-only prop.",
          "name": "_debug",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "jsdoc-tags.ts",
            "line": 36,
          },
          "tags": {
            "internal": true,
          },
          "type": {
            "kind": "primitive",
            "name": "boolean",
          },
        },
        {
          "defaultValue": undefined,
          "description": "A prop with a custom tag.",
          "name": "width",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "jsdoc-tags.ts",
            "line": 43,
          },
          "tags": {
            "category": "Layout",
          },
          "type": {
            "kind": "primitive",
            "name": "number",
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "jsdoc-tags.ts",
        "line": 7,
      },
      "tags": {
        "see": "https://example.com/docs",
        "since": "1.0.0",
      },
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": undefined,
            "description": "The component's title.",
            "name": "title",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "jsdoc-tags.ts",
              "line": 14,
            },
            "tags": {
              "example": [
                "Hello World",
                "Another example",
              ],
            },
            "type": {
              "kind": "primitive",
              "name": "string",
            },
          },
          {
            "defaultValue": undefined,
            "description": "A deprecated prop.",
            "name": "name",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "jsdoc-tags.ts",
              "line": 21,
            },
            "tags": {
              "deprecated": "Use \`title\` instead.",
            },
            "type": {
              "kind": "primitive",
              "name": "string",
            },
          },
          {
            "defaultValue": "medium",
            "description": "Size of the component.",
            "name": "size",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "jsdoc-tags.ts",
              "line": 29,
            },
            "tags": {
              "default": "medium",
              "since": "2.0.0",
            },
            "type": {
              "kind": "union",
              "members": [
                {
                  "kind": "literal",
                  "value": "'small'",
                },
                {
                  "kind": "literal",
                  "value": "'medium'",
                },
                {
                  "kind": "literal",
                  "value": "'large'",
                },
              ],
            },
          },
          {
            "defaultValue": undefined,
            "description": "Internal-only prop.",
            "name": "_debug",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "jsdoc-tags.ts",
              "line": 36,
            },
            "tags": {
              "internal": true,
            },
            "type": {
              "kind": "primitive",
              "name": "boolean",
            },
          },
          {
            "defaultValue": undefined,
            "description": "A prop with a custom tag.",
            "name": "width",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "jsdoc-tags.ts",
              "line": 43,
            },
            "tags": {
              "category": "Layout",
            },
            "type": {
              "kind": "primitive",
              "name": "number",
            },
          },
        ],
      },
      "typeParameters": [],
    },
  ],
  "related": [],
  "version": 1,
}
`;

exports[`generateDocsFromSource > snapshot tests > SelectProps output matches snapshot 1`] = `
{
  "entries": [
    {
      "description": "Props for a generic Select component.",
      "kind": "interface",
      "name": "SelectProps",
      "properties": [
        {
          "defaultValue": undefined,
          "description": "Available options.",
          "name": "options",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 18,
          },
          "tags": {},
          "type": {
            "elementType": {
              "kind": "reference",
              "name": "SelectOption",
              "typeArguments": [
                {
                  "kind": "reference",
                  "name": "T",
                },
              ],
            },
            "kind": "array",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Currently selected value.",
          "name": "selected",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 20,
          },
          "tags": {},
          "type": {
            "kind": "reference",
            "name": "T",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Called when the value changes.",
          "name": "onChange",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 24,
          },
          "tags": {},
          "type": {
            "kind": "function",
            "parameters": [
              {
                "name": "value",
                "optional": false,
                "rest": false,
                "type": {
                  "kind": "reference",
                  "name": "T",
                },
              },
            ],
            "returnType": {
              "kind": "intrinsic",
              "name": "void",
            },
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "generics.ts",
        "line": 16,
      },
      "tags": {},
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": undefined,
            "description": "Available options.",
            "name": "options",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 18,
            },
            "tags": {},
            "type": {
              "elementType": {
                "kind": "reference",
                "name": "SelectOption",
                "typeArguments": [
                  {
                    "kind": "reference",
                    "name": "T",
                  },
                ],
              },
              "kind": "array",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Currently selected value.",
            "name": "selected",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 20,
            },
            "tags": {},
            "type": {
              "kind": "reference",
              "name": "T",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Called when the value changes.",
            "name": "onChange",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 24,
            },
            "tags": {},
            "type": {
              "kind": "function",
              "parameters": [
                {
                  "name": "value",
                  "optional": false,
                  "rest": false,
                  "type": {
                    "kind": "reference",
                    "name": "T",
                  },
                },
              ],
              "returnType": {
                "kind": "intrinsic",
                "name": "void",
              },
            },
          },
        ],
      },
      "typeParameters": [
        {
          "constraint": {
            "kind": "union",
            "members": [
              {
                "kind": "primitive",
                "name": "string",
              },
              {
                "kind": "primitive",
                "name": "number",
              },
            ],
          },
          "default": {
            "kind": "primitive",
            "name": "string",
          },
          "name": "T",
        },
      ],
    },
  ],
  "related": [
    {
      "description": "A select option with a generic value.",
      "kind": "interface",
      "name": "SelectOption",
      "properties": [
        {
          "defaultValue": undefined,
          "description": "Display label.",
          "name": "label",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 6,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "string",
          },
        },
        {
          "defaultValue": undefined,
          "description": "The actual value.",
          "name": "value",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 8,
          },
          "tags": {},
          "type": {
            "kind": "reference",
            "name": "T",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Whether the option is disabled.",
          "name": "disabled",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "generics.ts",
            "line": 10,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "boolean",
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "generics.ts",
        "line": 4,
      },
      "tags": {},
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": undefined,
            "description": "Display label.",
            "name": "label",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 6,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "string",
            },
          },
          {
            "defaultValue": undefined,
            "description": "The actual value.",
            "name": "value",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 8,
            },
            "tags": {},
            "type": {
              "kind": "reference",
              "name": "T",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Whether the option is disabled.",
            "name": "disabled",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "generics.ts",
              "line": 10,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "boolean",
            },
          },
        ],
      },
      "typeParameters": [
        {
          "constraint": undefined,
          "default": undefined,
          "name": "T",
        },
      ],
    },
  ],
  "version": 1,
}
`;

exports[`generateDocsFromSource > snapshot tests > StyledProps output matches snapshot 1`] = `
{
  "entries": [
    {
      "description": "Component with nested style properties.",
      "kind": "interface",
      "name": "StyledProps",
      "properties": [
        {
          "defaultValue": undefined,
          "description": "Inline style overrides.",
          "name": "style",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "nested-objects.ts",
            "line": 8,
          },
          "tags": {},
          "type": {
            "kind": "object",
            "properties": [
              {
                "defaultValue": undefined,
                "description": "Text color.",
                "name": "color",
                "optional": true,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 10,
                },
                "tags": {},
                "type": {
                  "kind": "primitive",
                  "name": "string",
                },
              },
              {
                "defaultValue": undefined,
                "description": "Background color.",
                "name": "backgroundColor",
                "optional": true,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 12,
                },
                "tags": {},
                "type": {
                  "kind": "primitive",
                  "name": "string",
                },
              },
              {
                "defaultValue": undefined,
                "description": "Padding in pixels.",
                "name": "padding",
                "optional": true,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 14,
                },
                "tags": {},
                "type": {
                  "kind": "primitive",
                  "name": "number",
                },
              },
            ],
          },
        },
        {
          "defaultValue": undefined,
          "description": "Layout configuration.",
          "name": "layout",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "nested-objects.ts",
            "line": 20,
          },
          "tags": {},
          "type": {
            "kind": "object",
            "properties": [
              {
                "defaultValue": undefined,
                "description": "Direction of layout.",
                "name": "direction",
                "optional": false,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 22,
                },
                "tags": {},
                "type": {
                  "kind": "union",
                  "members": [
                    {
                      "kind": "literal",
                      "value": "'row'",
                    },
                    {
                      "kind": "literal",
                      "value": "'column'",
                    },
                  ],
                },
              },
              {
                "defaultValue": undefined,
                "description": "Gap between items.",
                "name": "gap",
                "optional": false,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 24,
                },
                "tags": {},
                "type": {
                  "kind": "primitive",
                  "name": "number",
                },
              },
              {
                "defaultValue": undefined,
                "description": "Nested margin config.",
                "name": "margin",
                "optional": false,
                "readonly": false,
                "source": {
                  "column": 4,
                  "filePath": "nested-objects.ts",
                  "line": 26,
                },
                "tags": {},
                "type": {
                  "kind": "object",
                  "properties": [
                    {
                      "defaultValue": undefined,
                      "description": "",
                      "name": "top",
                      "optional": false,
                      "readonly": false,
                      "source": {
                        "column": 6,
                        "filePath": "nested-objects.ts",
                        "line": 27,
                      },
                      "tags": {},
                      "type": {
                        "kind": "primitive",
                        "name": "number",
                      },
                    },
                    {
                      "defaultValue": undefined,
                      "description": "",
                      "name": "right",
                      "optional": false,
                      "readonly": false,
                      "source": {
                        "column": 6,
                        "filePath": "nested-objects.ts",
                        "line": 28,
                      },
                      "tags": {},
                      "type": {
                        "kind": "primitive",
                        "name": "number",
                      },
                    },
                    {
                      "defaultValue": undefined,
                      "description": "",
                      "name": "bottom",
                      "optional": false,
                      "readonly": false,
                      "source": {
                        "column": 6,
                        "filePath": "nested-objects.ts",
                        "line": 29,
                      },
                      "tags": {},
                      "type": {
                        "kind": "primitive",
                        "name": "number",
                      },
                    },
                    {
                      "defaultValue": undefined,
                      "description": "",
                      "name": "left",
                      "optional": false,
                      "readonly": false,
                      "source": {
                        "column": 6,
                        "filePath": "nested-objects.ts",
                        "line": 30,
                      },
                      "tags": {},
                      "type": {
                        "kind": "primitive",
                        "name": "number",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "nested-objects.ts",
        "line": 4,
      },
      "tags": {},
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": undefined,
            "description": "Inline style overrides.",
            "name": "style",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "nested-objects.ts",
              "line": 8,
            },
            "tags": {},
            "type": {
              "kind": "object",
              "properties": [
                {
                  "defaultValue": undefined,
                  "description": "Text color.",
                  "name": "color",
                  "optional": true,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 10,
                  },
                  "tags": {},
                  "type": {
                    "kind": "primitive",
                    "name": "string",
                  },
                },
                {
                  "defaultValue": undefined,
                  "description": "Background color.",
                  "name": "backgroundColor",
                  "optional": true,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 12,
                  },
                  "tags": {},
                  "type": {
                    "kind": "primitive",
                    "name": "string",
                  },
                },
                {
                  "defaultValue": undefined,
                  "description": "Padding in pixels.",
                  "name": "padding",
                  "optional": true,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 14,
                  },
                  "tags": {},
                  "type": {
                    "kind": "primitive",
                    "name": "number",
                  },
                },
              ],
            },
          },
          {
            "defaultValue": undefined,
            "description": "Layout configuration.",
            "name": "layout",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "nested-objects.ts",
              "line": 20,
            },
            "tags": {},
            "type": {
              "kind": "object",
              "properties": [
                {
                  "defaultValue": undefined,
                  "description": "Direction of layout.",
                  "name": "direction",
                  "optional": false,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 22,
                  },
                  "tags": {},
                  "type": {
                    "kind": "union",
                    "members": [
                      {
                        "kind": "literal",
                        "value": "'row'",
                      },
                      {
                        "kind": "literal",
                        "value": "'column'",
                      },
                    ],
                  },
                },
                {
                  "defaultValue": undefined,
                  "description": "Gap between items.",
                  "name": "gap",
                  "optional": false,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 24,
                  },
                  "tags": {},
                  "type": {
                    "kind": "primitive",
                    "name": "number",
                  },
                },
                {
                  "defaultValue": undefined,
                  "description": "Nested margin config.",
                  "name": "margin",
                  "optional": false,
                  "readonly": false,
                  "source": {
                    "column": 4,
                    "filePath": "nested-objects.ts",
                    "line": 26,
                  },
                  "tags": {},
                  "type": {
                    "kind": "object",
                    "properties": [
                      {
                        "defaultValue": undefined,
                        "description": "",
                        "name": "top",
                        "optional": false,
                        "readonly": false,
                        "source": {
                          "column": 6,
                          "filePath": "nested-objects.ts",
                          "line": 27,
                        },
                        "tags": {},
                        "type": {
                          "kind": "primitive",
                          "name": "number",
                        },
                      },
                      {
                        "defaultValue": undefined,
                        "description": "",
                        "name": "right",
                        "optional": false,
                        "readonly": false,
                        "source": {
                          "column": 6,
                          "filePath": "nested-objects.ts",
                          "line": 28,
                        },
                        "tags": {},
                        "type": {
                          "kind": "primitive",
                          "name": "number",
                        },
                      },
                      {
                        "defaultValue": undefined,
                        "description": "",
                        "name": "bottom",
                        "optional": false,
                        "readonly": false,
                        "source": {
                          "column": 6,
                          "filePath": "nested-objects.ts",
                          "line": 29,
                        },
                        "tags": {},
                        "type": {
                          "kind": "primitive",
                          "name": "number",
                        },
                      },
                      {
                        "defaultValue": undefined,
                        "description": "",
                        "name": "left",
                        "optional": false,
                        "readonly": false,
                        "source": {
                          "column": 6,
                          "filePath": "nested-objects.ts",
                          "line": 30,
                        },
                        "tags": {},
                        "type": {
                          "kind": "primitive",
                          "name": "number",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "typeParameters": [],
    },
  ],
  "related": [],
  "version": 1,
}
`;

exports[`generateDocsFromSource > snapshot tests > ThemeConfig output matches snapshot 1`] = `
{
  "entries": [
    {
      "description": "Configuration for the theme.",
      "kind": "typeAlias",
      "name": "ThemeConfig",
      "properties": [
        {
          "defaultValue": "#000000",
          "description": "Primary color.",
          "name": "primaryColor",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "type-alias.ts",
            "line": 10,
          },
          "tags": {
            "default": "#000000",
          },
          "type": {
            "kind": "primitive",
            "name": "string",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Font size in pixels.",
          "name": "fontSize",
          "optional": false,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "type-alias.ts",
            "line": 13,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "number",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Whether dark mode is enabled.",
          "name": "darkMode",
          "optional": true,
          "readonly": false,
          "source": {
            "column": 2,
            "filePath": "type-alias.ts",
            "line": 16,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "boolean",
          },
        },
        {
          "defaultValue": undefined,
          "description": "Border radius.",
          "name": "borderRadius",
          "optional": false,
          "readonly": true,
          "source": {
            "column": 2,
            "filePath": "type-alias.ts",
            "line": 19,
          },
          "tags": {},
          "type": {
            "kind": "primitive",
            "name": "number",
          },
        },
      ],
      "source": {
        "column": 7,
        "filePath": "type-alias.ts",
        "line": 4,
      },
      "tags": {},
      "type": {
        "kind": "object",
        "properties": [
          {
            "defaultValue": "#000000",
            "description": "Primary color.",
            "name": "primaryColor",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "type-alias.ts",
              "line": 10,
            },
            "tags": {
              "default": "#000000",
            },
            "type": {
              "kind": "primitive",
              "name": "string",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Font size in pixels.",
            "name": "fontSize",
            "optional": false,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "type-alias.ts",
              "line": 13,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "number",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Whether dark mode is enabled.",
            "name": "darkMode",
            "optional": true,
            "readonly": false,
            "source": {
              "column": 2,
              "filePath": "type-alias.ts",
              "line": 16,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "boolean",
            },
          },
          {
            "defaultValue": undefined,
            "description": "Border radius.",
            "name": "borderRadius",
            "optional": false,
            "readonly": true,
            "source": {
              "column": 2,
              "filePath": "type-alias.ts",
              "line": 19,
            },
            "tags": {},
            "type": {
              "kind": "primitive",
              "name": "number",
            },
          },
        ],
      },
      "typeParameters": [],
    },
  ],
  "related": [],
  "version": 1,
}
`;
